--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/privacy",
+      "dest": "/privacy"
+    },
+    {
       "src": "/(.*)",
       "dest": "/"
     }
