--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,23 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "framework": "nextjs",
   "routes": [
     {
       "src": "/privacy",
       "dest": "/privacy"
+    },
+    {
+      "src": "/support",
+      "dest": "/support"
+    },
+    {
+      "src": "/contact",
+      "dest": "/contact"
+    },
+    {
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
